syntax = "proto3";

package chat;

option go_package = "rpc/chat";

service ChatService {  
    rpc ChatStream(ChatStreamRequest) returns (stream ChatStreamResponse);
}

message ChatStreamRequest {
    int32 user_id = 1;
    string prompt = 2; 
}

message ChatStreamResponse {
    string chunk = 1; 
}